test/errors/func_call1.ds

#OUTPUT
#Syntax Error: Invalid token in expression.
# -> [13] printf(=)
#
#END

#RET 1

extern func printf(s:str, ...)

func main -> int
    printf(=)
    return 0
end

